Dynamic-App-with-Kubernetes-and-EKS/manifest-files/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surveys
  labels:
    name: surveys
